add rxjs auto complete

--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
+  <script src="http://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/5.5.2/Rx.min.js"></script>
   <title>Auto Complete</title>
 </head>
 
 <body>
-  <input type="text" class="auto-complete" placeholder="regularInput">
+  <input type="text" class="auto-complete" placeholder="regular Input">
   <br>
-  <input type="text" class="auto-complete-rx" placeholder="rxInput">
-  <ul class="list-box">
-    <li></li>
-  </ul>
+  <input type="text" class="auto-complete-rx" placeholder="rx Input">
+  <ul class="list-box"></ul>
+  <script src="./dom.js"></script>
+  <script src="./functions.js"></script>
   <script src="./auto-complete.js"></script>
   <script src="./auto-complete-rx.js"></script>
 </body>
